--- a/Cookie/Cookie/CKRecipeEditionView.xib
+++ b/Cookie/Cookie/CKRecipeEditionView.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string key="NS.object.0">1938</string>
@@ -56,7 +56,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{284, 56}, {152, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="287737009">
 							<int key="NSCellFlags">604110336</int>
@@ -87,28 +86,8 @@
 									<object class="NSTextView" id="631292772">
 										<reference key="NSNextResponder" ref="75605320"/>
 										<int key="NSvFlags">2322</int>
-										<set class="NSMutableSet" key="NSDragTypes">
-											<string>Apple HTML pasteboard type</string>
-											<string>Apple PDF pasteboard type</string>
-											<string>Apple PICT pasteboard type</string>
-											<string>Apple PNG pasteboard type</string>
-											<string>Apple URL pasteboard type</string>
-											<string>CorePasteboardFlavorType 0x6D6F6F76</string>
-											<string>NSColor pasteboard type</string>
-											<string>NSFilenamesPboardType</string>
-											<string>NSStringPboardType</string>
-											<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
-											<string>NeXT RTFD pasteboard type</string>
-											<string>NeXT Rich Text Format v1.0 pasteboard type</string>
-											<string>NeXT TIFF v4.0 pasteboard type</string>
-											<string>NeXT font pasteboard type</string>
-											<string>NeXT ruler pasteboard type</string>
-											<string>WebURLsWithTitlesPboardType</string>
-											<string>public.url</string>
-										</set>
 										<string key="NSFrameSize">{282, 14}</string>
 										<reference key="NSSuperview" ref="75605320"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="514565105"/>
 										<object class="NSTextContainer" key="NSTextContainer" id="915329044">
 											<object class="NSLayoutManager" key="NSLayoutManager">
@@ -169,16 +148,17 @@
 												<integer value="1" key="NSUnderline"/>
 											</dictionary>
 											<nil key="NSDefaultParagraphStyle"/>
+											<nil key="NSTextFinder"/>
+											<int key="NSPreferredTextFinderStyle">1</int>
 										</object>
 										<int key="NSTVFlags">6</int>
-										<string key="NSMaxSize">{463, 1e+07}</string>
+										<string key="NSMaxSize">{463, 10000000}</string>
 										<string key="NSMinize">{209, 13}</string>
 										<nil key="NSDelegate"/>
 									</object>
 								</array>
 								<string key="NSFrame">{{1, 1}, {297, 127}}</string>
 								<reference key="NSSuperview" ref="192246720"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="631292772"/>
 								<reference key="NSDocView" ref="631292772"/>
 								<reference key="NSBGColor" ref="643722133"/>
@@ -208,7 +188,6 @@
 								<int key="NSvFlags">256</int>
 								<string key="NSFrame">{{298, 1}, {15, 127}}</string>
 								<reference key="NSSuperview" ref="192246720"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="708551949"/>
 								<reference key="NSTarget" ref="192246720"/>
 								<string key="NSAction">_doScroller:</string>
@@ -220,7 +199,6 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{-100, -100}, {87, 18}}</string>
 								<reference key="NSSuperview" ref="192246720"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="75605320"/>
 								<int key="NSsFlags">1</int>
 								<reference key="NSTarget" ref="192246720"/>
@@ -231,9 +209,8 @@
 						</array>
 						<string key="NSFrame">{{116, 276}, {314, 129}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="75605320"/>
-						<int key="NSsFlags">18</int>
+						<int key="NSsFlags">133138</int>
 						<reference key="NSVScroller" ref="603045329"/>
 						<reference key="NSHScroller" ref="514565105"/>
 						<reference key="NSContentView" ref="75605320"/>
@@ -243,7 +220,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{439, 318}, {147, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="698772897"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="102577961">
@@ -273,7 +249,6 @@
 						</set>
 						<string key="NSFrame">{{442, 363}, {141, 120}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="327195280"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="827227643">
@@ -295,7 +270,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{116, 414}, {132, 13}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="70767263"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSLevelIndicatorCell" key="NSCell" id="1001216071">
@@ -322,7 +296,6 @@
 										<int key="NSvFlags">256</int>
 										<string key="NSFrameSize">{307, 152}</string>
 										<reference key="NSSuperview" ref="135496203"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="208752784"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSTableHeaderView" key="NSHeaderView" id="509553691">
@@ -330,7 +303,6 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrameSize">{307, 17}</string>
 											<reference key="NSSuperview" ref="208752784"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="889712583"/>
 											<reference key="NSTableView" ref="591236487"/>
 										</object>
@@ -339,7 +311,6 @@
 											<int key="NSvFlags">-2147483392</int>
 											<string key="NSFrame">{{224, 0}, {16, 17}}</string>
 											<reference key="NSSuperview" ref="500945700"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="135496203"/>
 										</object>
 										<array class="NSMutableArray" key="NSTableColumns">
@@ -439,11 +410,11 @@
 										<int key="NSDraggingSourceMaskForNonLocal">0</int>
 										<bool key="NSAllowsTypeSelect">YES</bool>
 										<int key="NSTableViewDraggingDestinationStyle">0</int>
+										<int key="NSTableViewGroupRowStyle">1</int>
 									</object>
 								</array>
 								<string key="NSFrame">{{1, 17}, {307, 152}}</string>
 								<reference key="NSSuperview" ref="500945700"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="591236487"/>
 								<reference key="NSDocView" ref="591236487"/>
 								<reference key="NSBGColor" ref="610503377"/>
@@ -454,7 +425,6 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 								<reference key="NSSuperview" ref="500945700"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="393718144"/>
 								<reference key="NSTarget" ref="500945700"/>
 								<string key="NSAction">_doScroller:</string>
@@ -466,7 +436,6 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 								<reference key="NSSuperview" ref="500945700"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="908321058"/>
 								<int key="NSsFlags">1</int>
 								<reference key="NSTarget" ref="500945700"/>
@@ -481,7 +450,6 @@
 								</array>
 								<string key="NSFrame">{{1, 0}, {307, 17}}</string>
 								<reference key="NSSuperview" ref="500945700"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="509553691"/>
 								<reference key="NSDocView" ref="509553691"/>
 								<reference key="NSBGColor" ref="610503377"/>
@@ -491,9 +459,8 @@
 						</array>
 						<string key="NSFrame">{{116, 92}, {309, 170}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="135496203"/>
-						<int key="NSsFlags">562</int>
+						<int key="NSsFlags">133682</int>
 						<reference key="NSVScroller" ref="335052194"/>
 						<reference key="NSHScroller" ref="393718144"/>
 						<reference key="NSContentView" ref="135496203"/>
@@ -506,7 +473,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{142, 62}, {28, 23}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="135497694"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="647891064">
@@ -528,7 +494,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{116, 62}, {28, 23}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="343038903"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="913922356">
@@ -550,7 +515,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{17, 245}, {76, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="500945700"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="489398716">
@@ -573,7 +537,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{17, 388}, {79, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="192246720"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="883115860">
@@ -591,7 +554,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{17, 413}, {34, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="756355543"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="993059939">
@@ -609,7 +571,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{17, 438}, {65, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="418643224"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="962722847">
@@ -627,7 +588,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{116, 431}, {135, 26}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="785926011"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSComboBoxCell" key="NSCell" id="684743122">
@@ -708,6 +668,7 @@
 								<int key="NSDraggingSourceMaskForNonLocal">0</int>
 								<bool key="NSAllowsTypeSelect">YES</bool>
 								<int key="NSTableViewDraggingDestinationStyle">0</int>
+								<int key="NSTableViewGroupRowStyle">1</int>
 							</object>
 						</object>
 					</object>
@@ -716,7 +677,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{116, 460}, {132, 22}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="549561637"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="439139280">
@@ -740,7 +700,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{17, 463}, {34, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="756461380"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="578871162">
@@ -756,7 +715,6 @@
 				</array>
 				<string key="NSFrameSize">{600, 500}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1011937403"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -1221,71 +1179,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">1143</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CKRecipeEditionViewController</string>
-					<string key="superclassName">NSViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="addIngredient:">id</string>
-						<string key="choosePictureDialog:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="addIngredient:">
-							<string key="name">addIngredient:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="choosePictureDialog:">
-							<string key="name">choosePictureDialog:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="addButton">NSButton</string>
-						<string key="categoryField">NSComboBoxCell</string>
-						<string key="imageView">NSImageView</string>
-						<string key="ingredientsTable">NSTableView</string>
-						<string key="nameField">NSTextField</string>
-						<string key="ratingIndicator">NSLevelIndicator</string>
-						<string key="summaryField">NSTextView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="addButton">
-							<string key="name">addButton</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="categoryField">
-							<string key="name">categoryField</string>
-							<string key="candidateClassName">NSComboBoxCell</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="imageView">
-							<string key="name">imageView</string>
-							<string key="candidateClassName">NSImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="ingredientsTable">
-							<string key="name">ingredientsTable</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nameField">
-							<string key="name">nameField</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="ratingIndicator">
-							<string key="name">ratingIndicator</string>
-							<string key="candidateClassName">NSLevelIndicator</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="summaryField">
-							<string key="name">summaryField</string>
-							<string key="candidateClassName">NSTextView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CKRecipeEditionViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
